--- a/vignettes/SIR-MCMC.Rmd
+++ b/vignettes/SIR-MCMC.Rmd
@@ -11,6 +11,68 @@ vignette: >
 
 We describe how to set-up and run a simple Metropolis-Hastings-based Markov chain Monte Carlo (MCMC) sampler under the susceptible-infectious-removed (SIR) model.
 
+- TODO: Write most of the document
+
+```{r}
+library(MultiBD)
+data(Eyam)
+```
+
+```{r}
+loglik_sir <- function(param, data) {
+  alpha <- exp(param[1]) # Rates must be non-negative
+  beta  <- exp(param[2])
+  
+  # Set-up SIR model
+  drates1 <- function(a, b) { 0 }
+  brates2 <- function(a, b) { 0 }
+  drates2 <- function(a, b) { alpha * b     }
+  trans12 <- function(a, b) { beta  * a * b }
+  
+  sum(sapply(1:(nrow(data) - 1), # Sum across all time steps k
+             function(k) {
+               log(
+                 dbd_prob(  # Compute the transition probability matrix
+                   t  = data$time[k + 1] - data$time[k], # Time increment
+                   a0 = data$S[k], b0 = data$I[k],       # From: S(t_k), I(t_k)                                      
+                   drates1, brates2, drates2, trans12,
+                   a = data$S[k + 1], B = data$S[k] + data$I[k] - data$S[k + 1],
+                   computeMode = 4, nblocks = 80         # Compute using 4 threads
+                 )[1, data$I[k + 1] + 1]                 # To: S(t_(k+1)), I(t_(k+1))
+               )
+             }))
+}
+```
+
+```{r}
+logprior <- function(param) {
+  log_alpha <- param[1]
+  log_beta <- param[2]
+  
+  dnorm(log_alpha, mean = 0, sd = 100, log = TRUE) +
+    dnorm(log_beta, mean = 0, sd = 100, log = TRUE)
+}
+```
+
+```{r}
+source("http://bioconductor.org/biocLite.R")
+biocLite("graph")
+biocLite("Rgraphviz")
+install.packages("MCMCpack")
+```
+
+```{r}
+library(MCMCpack)
+
+alpha0 <- 3.39
+beta0  <- 0.0212
+
+post_sample <- MCMCmetrop1R(fun = function(param) { loglik_sir(param, Eyam) + logprior(param) },
+                            theta.init = log(c(alpha0, beta0)),
+                            mcmc = 10, burnin = 0,
+                            verbose = 1)
+```
+
 
 Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
 
