--- a/vignettes/SIRtrans.Rnw
+++ b/vignettes/SIRtrans.Rnw
@@ -41,10 +41,10 @@
 
 %\VignetteIndexEntry{bdsem_tutorial}
 %\VignetteEngine{knitr::knitr}
-<<setup, include=FALSE, cache=FALSE>>=
+<<setup, include=TRUE, echo=FALSE, cache=FALSE>>=
 library(knitr)
 # set global chunk options
-opts_chunk$set(fig.path='figure/minimal-', fig.align='center', fig.show='hold', cache=TRUE)
+opts_chunk$set(fig.path='figure/minimal-', fig.align='center', fig.show='hold', cache=FALSE)
 options(formatR.arrow=TRUE,width=90,tidy=FALSE)
 @
 
@@ -82,10 +82,11 @@ Below, I'll walk through some example code that implements the above formula. I'
 
 First, we have the relatively simple ODE solutions, and code to evaluate them over a grid of arguments (naively with nested for loops) and functions to take the Fourier transforms of these grids, yielding transition probabilities.
 
-<<ODE, cache=TRUE>>=
+<<ODE, echo=TRUE, warning=FALSE>>=
 library(matrixStats)
 # solutions to phi1 and phi2, the generating function ODES
-# phi1 is generating function starting with 1 suscep, phi2 is starting with 1 infected
+# phi1 is generating function starting with 1 suscep
+# phi2 is starting with 1 infected
 phi1 <- function(t, s1, s2, beta, gam, I0){
   return( 1 + exp(-gam*t)*beta*I0*(s2-1)/(beta*I0-gam) + 
             exp(-beta*I0*t)*(s1 - 1 - beta*I0*(s2-1)/(beta*I0-gam) ) )
@@ -95,9 +96,11 @@ phi2 <- function(t, s2, gam){
   return(1 + (s2-1)*exp(-gam*t))
 }
 
-#solve over a grid: s1.seq and s2.seq will be vectors of complex numbers along unit circle
-phi1.grid <- function(t, s1.seq, s2.seq, beta, gam, I0){
-  grid <- matrix(nrow = length(s1.seq), ncol = length(s2.seq)) #this will store the grid
+#solve over a grid: s1.seq and s2.seq will be vectors of complex numbers 
+#along unit circle
+phi1.grid <- function(t, s1.seq, s2.seq, beta, gam, I0) {
+  #this will store the grid
+  grid <- matrix(nrow = length(s1.seq), ncol = length(s2.seq)) 
   for(i in 1:length(s1.seq)){
     for(j in 1:length(s2.seq)){    
       grid[i,j] <- phi1(t, s1.seq[i], s2.seq[j], beta, gam, I0) 
@@ -107,14 +110,16 @@ phi1.grid <- function(t, s1.seq, s2.seq, beta, gam, I0){
 }
 
 phi2.grid <- function(t, s2.seq, gam){
-  grid <- matrix(nrow = length(s2.seq), ncol = length(s2.seq)) #this will store the grid
+  #this will store the grid
+  grid <- matrix(nrow = length(s2.seq), ncol = length(s2.seq)) 
   for(j in 1:length(s2.seq)){
     grid[,j] <- phi2(t, s2.seq[j], gam) #columns will be constant
   }
   return(grid)
 }
 
-#exponentiate grid solutions appropriately and fast fourier transform to get trans probs
+#exponentiate grid solutions appropriately and fast fourier transform 
+#to get trans probs
 getTransProbsODE <- function(t, gridLength, beta, gam, S0, I0){
   s1.seq <- exp(2*pi*1i*seq(from = 0, to = (gridLength-1))/gridLength)
   s2.seq <- exp(2*pi*1i*seq(from = 0, to = (gridLength-1))/gridLength)
@@ -143,7 +148,8 @@ A <- function(t, m, n, k, j, beta, gam){
 # expression for the phi2 partials
 B <- function(t, n, j, gam){
   if(j>n){return(0)} else{ 
-    return( factorial(n)* (1-exp(-gam*t))^(n-j) * exp(-gam*j*t)/factorial(n-j) )
+    return( factorial(n)* (1-exp(-gam*t))^(n-j) * 
+              exp(-gam*j*t)/factorial(n-j) )
   }
 }
 
@@ -161,22 +167,29 @@ A.vectorized <- function(t, m, n, k, j, beta, gam){
 A.vec.log <- function(t, m, n, k, j, beta, gam){
   return( lgamma(m+1) - lgamma(m-k-j+1) - (k*beta*n*t) + 
             (m-k-j)* log( ( 1 - beta*n*exp(-gam*t)/(beta*n-gam) - 
-                              exp(-beta*n*t)*(1 - beta*n/(beta*n-gam)  ) ) ) 
-          + j * log( ( beta*n*(exp(-gam*t) - exp(-beta*n*t))/(beta*n - gam) ) )
+                              exp(-beta*n*t) * 
+                              (1 - beta*n/(beta*n-gam)  ) ) ) 
+          + j * log( ( beta*n*(exp(-gam*t) - exp(-beta*n*t)) / 
+                         (beta*n - gam) ) )
   )
 }
 
 B.vectorized <- function(t, n, j, gam){
-  return( factorial(n)* (1-exp(-gam*t))^(n-j) * exp(-gam*j*t)/factorial(n-j) )
+  return( factorial(n)* (1-exp(-gam*t))^(n-j) * exp(-gam*j*t) / 
+            factorial(n-j) )
 }
 
 B.vec.log <- function(t, n, j, gam){
-  return( lgamma(n+1) - lgamma(n-j+1) + (n-j)*log(1 - exp(-gam*t)) - gam*j*t  )
+  return( lgamma(n+1) - lgamma(n-j+1) + (n-j)*log(1 - exp(-gam*t)) 
+          - gam*j*t  )
 }
 
-# loops over appropriate indices in a Leibniz-rule sum for partial derivative solution
-# uses expressions A(), B(), and returns P_{(m,n),(k,l)}(t) given beta and gamma
-# slow version with for loop: included here since it's more transparent to read
+# loops over appropriate indices in a Leibniz-rule sum 
+# for partial derivative solution.
+# uses expressions A(), B(), and returns P_{(m,n),(k,l)}(t) given 
+# beta and gamma.
+# slow version with for loop: included here since it's more transparent 
+# to read
 TransProb_mnkl_old <- function(t, m, n, k, l, beta, gam){
   AA <- BB <- rep(0,l+1)
   c <- choose(l,seq(0,l))
@@ -239,12 +252,12 @@ simulateSIR <- function(t.end, S, I, beta, gam, maxEvents = 99999999){
     if(t.cur > t.end){            #end of simulation period
       return( c(S,I) ) 
     } 
-    decision <- rbinom(1, 1, infectRate/sum(rates))  #sample the type of next event
-    #print(decision)
-    if(decision == 1){   #infection
-      S <- S-1; I <- I+1
+    #sample the type of next event
+    decision <- rbinom(1, 1, infectRate/sum(rates))  
+    if(decision == 1) {   #infection
+      S <- S - 1; I <- I + 1
     } else {             #recovery
-      I <- I-1
+      I <- I - 1
     }
   }
   return(-99) #error code for testing
@@ -260,7 +273,8 @@ sim.once <- function(t.end, S, I, beta, gam, maxEvents = 99999999){
 
 getTrans.MC <- function(N, t.end, S, I, beta, gam){
   result <- replicate(N, sim.once(t.end, S, I, beta, gam))
-  trans.count <- matrix(0, S+I,S+I)  #make big enough to account for all events: count end states
+  #make big enough to account for all events: count end states
+  trans.count <- matrix(0, S+I,S+I) 
   for(i in 1:N){
     id <- result[,i]+1 
     #indices in the resulting transition count: ie if you end at (1,1), 
@@ -274,7 +288,7 @@ getTrans.MC <- function(N, t.end, S, I, beta, gam){
 
 Given the functions above for different ways to compute transition probabilities as well as Monte Carlo simulation, we are ready to run the code and look at comparisons. Below, we set $S_0 = 140, I_0 = 10$ and look at a time interval of length $.5$, but these are parameters we can explore when deciding what kind of results/comparisons to report.
 
-<<eval=TRUE, cache=TRUE>>=
+<<>>=
 #Choose initial S and I population here
 S <- 140
 I <- 10
@@ -282,28 +296,62 @@ beta = .5/(S+I)
 gamma = .1
 N <- 1000 #number of MC realizations: increase N in practice
 t.end <- .5 #time interval length
+@
 
+<<MonteCarlo, eval=FALSE>>==
 #monte carlo estimate and standard error
 tpm.MC <- getTrans.MC(N, t.end, S, I, beta, gamma)
 sd.MC <- sqrt( (tpm.MC)*(1 - tpm.MC)/N )
 @
 
-<<>>=
+<<doMonteCarlo, echo=FALSE, eval=TRUE, include=FALSE>>==
+# Provide manual caching because knitr's caching
+# is not working in my hands
+file <- system.file("vignetteCache", "monte_carlo.RData", package="MultiBD")
+if (file.exists(file)) {
+  load(file)  
+} else {
+<<MonteCarlo>>
+    save(tpm.MC, sd.MC, file = "../inst/vignetteCache/monte_carlo.RData")
+} 
+@
+
+
+<<GenFunc, eval=FALSE>>=
 # now, calculate probabilities using generating functions
 gridLength = 256
-system.time( tpm1 <- getTransProbsODE(t.end, gridLength, 
-                                      beta, gamma, S, I)[1:(S+I),1:(S+I)] )
-system.time( tpm2 <- getTransProbsClosed(t.end, gridLength, 
-                                         beta, gamma, S, I)[1:(S+I),1:(S+I)]  )
-
+t1 <- system.time(
+  tpm1 <- getTransProbsODE(t.end, gridLength,
+                           beta, gamma, S, I)[1:(S+I),1:(S+I)])
+t2 <- system.time(
+  tpm2 <- getTransProbsClosed(t.end, gridLength,
+                              beta, gamma, S, I)[1:(S+I),1:(S+I)])
 @
+
+<<doGenFunc, echo=FALSE, eval=TRUE, include=FALSE>>==
+# Provide manual caching because knitr's caching
+# is not working in my hands
+file <- system.file("vignetteCache", "gen_func.RData", package="MultiBD")
+if (file.exists(file)) {
+  load(file)  
+} else {
+<<GenFunc>>
+    save(tpm1, tpm2, t1, t2, file = "../inst/vignetteCache/gen_func.RData")
+} 
+@
+
+<<>>==
+t1
+t2
+@
+
 According to timing results, it looks like just using the Fourier transforms on a grid of ODE solutions is faster, but recall in practice we only ever need to evaluate one closed form entry at a time rather than ever used the function \texttt{getTransProbClosed}. We will only need to use the function \texttt{TransProb\_mnkl}.
 
 Next, we can take a look at accuracy:
 <<>>=
 # total errors:
-sum(abs(tpm1-tpm2)) # compare the two methods
-sum(abs(tpm1-tpm.MC)) #compare to true model Monte Carlo probabilities
+sum(abs(tpm1 - tpm2))   # compare the two methods
+sum(abs(tpm1 - tpm.MC)) #compare to true model Monte Carlo probabilities
 @
 
 In terms of \textit{total} absolute error, we see that the closed form probabilities check out with the ODE method which we know should work properly. In terms of assessing how well we capture the true SIR model we are approximating, there is clearly error accrued: let's marginalize over susceptibles so that it's easier to compare than looking at every individual transition probability. We can also explore other ways to quantify or visualize the errors, and of course will eventually also compare with the continued fraction method. 
@@ -317,12 +365,12 @@ infectiveSD.MC <- sqrt( (infectiveProbs.MC)*(1 - infectiveProbs.MC)/(N) )
 #check that this SD is correct...
 lower <- infectiveProbs.MC - infectiveSD.MC*1.96
 upper <- infectiveProbs.MC + infectiveSD.MC*1.96
-infectiveProbs.FFT <-round(colSums(tpm2),4)
+infectiveProbs.FFT <- round(colSums(tpm2),4)
 
 require(plotrix)
-plot(seq(S+I), xlim = c(0,50), infectiveProbs.FFT, pch = 3, 
+plot(seq(S + I), xlim = c(0,50), infectiveProbs.FFT, pch = 3, 
      col = 'purple', main = "Probabilities of ending with x infectives")
-plotCI(seq(S+I), xlim = c(0,50), infectiveProbs.MC, pch = 16, 
+plotCI(seq(S + I), xlim = c(0,50), infectiveProbs.MC, pch = 16, 
        col = 4, ui = upper, li = lower, add=TRUE)
 
 #marginalize other way:
@@ -330,7 +378,7 @@ suscepProbs.MC <- rowSums(tpm.MC)
 suscepSD.MC <- sqrt( (suscepProbs.MC)*(1 - suscepProbs.MC)/(N) )
 lower <- suscepProbs.MC - suscepSD.MC*1.96
 upper <- suscepProbs.MC + suscepSD.MC*1.96
-suscepProbs.FFT <-round(rowSums(tpm2),4)
+suscepProbs.FFT <- round(rowSums(tpm2),4)
 
 plot(seq(S+I), xlim = c(110,160), suscepProbs.FFT, pch = 3, 
      col = 'purple', main = "Probabilities of ending with x susceptibles")
@@ -361,19 +409,23 @@ trans=function(a,b){beta*a*b}
 @
 
 Having specified the parameters, list of times, and rates, let's compute probabilities using each method (the following takes a while to run because of the Monte Carlo simulations):
-<<makeTPMs, cache=TRUE>>= 
+<<MakeTPMs, cache=FALSE, eval=FALSE>>= 
 #indexed by time, type of computation, and dimensions of the tpm
-tpmArray <- array(NA, dim= c(length(tList),3, 52, 25 )) #store a subset of transition probabilities 
+tpmArray <- array(NA, dim = c(length(tList), 3, 52, 25 )
+                  ) #store a subset of transition probabilities 
+time1 <- rep(0, length(tList)); time2 <- rep(0, length(tList))
 
 for(i in 1:length(tList)){
   t.end <- tList[i]
-  system.time( tpm.Closed <- getTransProbsClosed(t.end, gridLength, 
-                                           beta, alpha, a0, b0) ) 
+  time1[i] <- system.time( 
+    tpm.Closed <- getTransProbsClosed(t.end, gridLength,
+                                      beta, alpha, a0, b0) ) 
   tpm1 = tpm.Closed[1:(a0+1),] #using 2-type branching approximation
   
   #using continued fractions via MultiBD
-  system.time( tpm2 <- dbd_prob(t.end, a0, b0, drates1, brates2, drates2, trans,
-                                           a=A, B))#, computeMode=2))
+  time2[i] <- system.time(
+    tpm2 <- dbd_prob(t.end, a0, b0, drates1, brates2, drates2, trans,
+                     a=A, B))#, computeMode=2))
   #MC simulation "ground truth"
   tpm.MC <- getTrans.MC(nSim, t.end, a0, b0, beta, alpha)
   tpm3 <- tpm.MC[1:(a0+1), ]
@@ -383,6 +435,18 @@ for(i in 1:length(tList)){
   tpmArray[i,2,,] <- tpm2[60:(a0+1),1:25]
   tpmArray[i,3,,] <- tpm3[60:(a0+1),1:25]
 }
+@
+
+<<doMakeTPMs, echo=FALSE, eval=TRUE, include=FALSE>>==
+# Provide manual caching because knitr's caching
+# is not working in my hands
+file <- system.file("vignetteCache", "tpm_array.RData", package="MultiBD")
+if (file.exists(file)) {
+  load(file)  
+} else {
+<<MakeTPMs>>
+    save(tpmArray, time1, time2, file = "../inst/vignetteCache/tpm_array.RData")
+} 
 @
 
 Next, we can look at measures of similarity: first, we can look at where the largest entries are located, and then plot the probability mass over regions where most of the support lies.
@@ -421,23 +485,26 @@ Next, we would like to vary the populations, time intervals, etc, and make some 
 
 <<transitionCompare>>=
 library(plotrix)
-inds <- t(which(tpmArray[7,2,,] >= sort(tpmArray[7,2,,], decreasing=T)[16], arr.ind=TRUE))
+inds <- t(which(tpmArray[7,2,,] >= sort(tpmArray[7,2,,], decreasing=T)[16],
+                arr.ind=TRUE))
 #ind1 <- sample(52,25, replace=T); ind2 <- sample(25,25,replace=T)
 par(mfrow = c(4,4), oma = c(5,4,0,0) + 0.1, mar = c(0,0,1,1) + 0.1)
 for(i in 1:16){
-plot(tList, tpmArray[,2,inds[1,i], inds[2,i] ], pch = 17, col = 'red',
-ylim = c(0,max(tpmArray[,,inds[1,i], inds[2,i]])),
-yaxt = 'n', xlab = "dt")
-MCp <- tpmArray[,3,inds[1,i], inds[2,i] ] #MC prob
-plotCI(tList, MCp, pch = 4, col = 'green', ui=MCp+1.96*sqrt(MCp*(1-MCp)/nSim),
-li=MCp-1.96*sqrt(MCp*(1-MCp)/nSim), add = TRUE)
-points(tList, tpmArray[,1,inds[1,i], inds[2,i] ], col='purple', pch = 16)
+  plot(tList, tpmArray[,2,inds[1,i], inds[2,i] ], pch = 17, col = 'red',
+       ylim = c(0,max(tpmArray[,,inds[1,i], inds[2,i]])),
+       yaxt = 'n', xlab = "dt")
+  MCp <- tpmArray[,3,inds[1,i], inds[2,i] ] #MC prob
+  plotCI(tList, MCp, pch = 4, col = 'green', 
+         ui = MCp+1.96*sqrt(MCp*(1-MCp)/nSim),
+  li <- MCp-1.96*sqrt(MCp*(1-MCp)/nSim), add = TRUE)
+  points(tList, tpmArray[,1,inds[1,i], inds[2,i] ], 
+         col='purple', pch = 16)
 }
 @
 
 
 Let's repeat some of the heatmap images to check the multibd package with larger populations:
-<<largerPopulation,cache=TRUE>>=
+<<LargerPopulation,eval=FALSE>>=
 tList  <- c( .5, 1)
 gridLength = 256
 a0 = 235 # S_0
@@ -447,12 +514,15 @@ B = gridLength - 1
 alpha = 3.2 #3.2 #this is death rate
 beta = .025 #.019 #this is transition or infection rates
 nSim <- 10000
-tpmArray <- array(NA, dim= c(length(tList),2, (a0+1), 240 )) #store a subset of transition probabilities 
+#store a subset of transition probabilities 
+tpmArray <- array(NA, dim= c(length(tList),2, (a0+1), 240 )) 
+time1 <- rep(0, length(tList))
 
 for(i in 1:length(tList)){
   t.end <- tList[i]
-  system.time( tpm2 <- dbd_prob(t.end, a0, b0, drates1, brates2, drates2, trans,
-                                           a=A, B))#, computeMode=2))
+  time1 <- system.time(
+    tpm2 <- dbd_prob(t.end, a0, b0, drates1, brates2, drates2, trans,
+                     a=A, B))#, computeMode=2))
   #MC simulation "ground truth"
   tpm.MC <- getTrans.MC(nSim, t.end, a0, b0, beta, alpha)
   tpm3 <- tpm.MC[1:(a0+1), ]
@@ -462,6 +532,20 @@ for(i in 1:length(tList)){
   tpmArray[i,2,,] <- tpm3[1:(a0+1),1:240]
 }
 @
+
+<<doLargerPopulation, echo=FALSE, eval=TRUE, include=FALSE>>==
+# Provide manual caching because knitr's caching
+# is not working in my hands
+file <- system.file("vignetteCache", "larger_pop.RData", package="MultiBD")
+if (file.exists(file)) {
+  load(file)  
+} else {
+<<LargerPopulation>>
+    save(tpmArray, time1, file = "../inst/vignetteCache/larger_pop.RData")
+} 
+@
+
+
 The below plots are for $t=.5, 1$ respectively:
 <<>>=
 par(mfrow=(c(2,1)))
